updated dashboard view

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -11,76 +11,60 @@
 
     <body>
 
-        <nav>
-            <div class="nav-wrapper">
+        <nav class="darken-3">
+            <div class="nav-wrapper darken-3">
               <a href="#" class="brand-logo">Logo</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+<!--                <li><a href="sass.html">Sass</a></li>-->
+<!--                <li><a href="badges.html">Components</a></li>-->
+<!--                <li><a href="collapsible.html">JavaScript</a></li>-->
               </ul>
             </div>
           </nav>
 
           <div class="container">
 
-            <div class="row">
+            <div class="row mt-6">
                 <div class="col s12 m6">
                   <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                      <span class="card-title">Card Title</span>
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                      <a href="#">This is a link</a>
+                      <span class="card-title card-action">
+                        <a href="/dashboard/faculties">  Faculties</a>
+                      </span>
                     </div>
                   </div>
                 </div>
 
 
-                <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                      <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
-                      </div>
-                    </div>
+              <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title card-action">
+                      <a href="/dashboard/events">  Events</a>
+                    </span>
                   </div>
+                </div>
+              </div>
 
-                  <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                      <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
-                      </div>
-                    </div>
+              <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title card-action">
+                      <a href="/dashboard/committies">  Committees</a>
+                    </span>
                   </div>
+                </div>
+              </div>
 
-                  <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                      <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
-                      </div>
-                    </div>
+              <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title card-action">
+                      <a href="/dashboard/studets"> Students</a>
+                    </span>
                   </div>
+                </div>
+              </div>
 
               </div>
               
