--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,26 +1,31 @@
 <html>
     <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <!--Let browser know website is optimized for mobile-->
+
+        <linl type="text/css" href="/static/css/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
 
-        <nav class="darken-3">
-            <div class="nav-wrapper darken-3">
-              <a href="#" class="brand-logo">Logo</a>
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
-<!--                <li><a href="sass.html">Sass</a></li>-->
-<!--                <li><a href="badges.html">Components</a></li>-->
-<!--                <li><a href="collapsible.html">JavaScript</a></li>-->
-              </ul>
+        <nav class="grey darken-3">
+            <div class="container top-nav">
+                <div class="nav-wrapper">
+                    <a href="/" class="brand-logo">Committee</a>
+                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="fa fa-bars fa-2x"></i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+<!--                        <li><a href="/dashbord">dashboard</a></li>-->
+                        <li><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
 
           <div class="container">
 
@@ -29,7 +34,7 @@
                   <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                       <span class="card-title card-action">
-                        <a href="/dashboard/faculties">  Faculties</a>
+                        <a href="/dashboard/faculty">  Faculties</a>
                       </span>
                     </div>
                   </div>
