:bug: Fix incorrect link tag

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,10 +5,9 @@
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
 
-
         <!--Let browser know website is optimized for mobile-->
 
-        <linl type="text/css" href="/static/css/style.css" />
+        <link type="text/css" href="/static/css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
