--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -8,7 +8,7 @@
 
         <!--Let browser know website is optimized for mobile-->
 
-        <linl type="text/css" href="/static/css/style.css" />
+        <link type="text/css" href="/static/css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
