--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -64,7 +64,7 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title card-action">
-                      <a href="/dashboard/studets"> Students</a>
+                      <a href="/dashboard/students/"> Students</a>
                     </span>
                   </div>
                 </div>
