--- a/views/faculty.html
+++ b/views/faculty.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <link type="text/css" href="/static/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="/static/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
@@ -27,9 +27,9 @@
     </div>
 </nav>
 
-<div class="button">
+<div class="button container">
     <!-- Modal Trigger -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+    <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-1" href="#modal1">Add New Faculty</a>
 
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
@@ -55,17 +55,18 @@
 
                 </div>
             </div>
-            <div class="modal-footer">
-                <input type="submit" value="Submit" class=" waves-effect waves-green btn-flat"/>
+            <div class="modal-footer" >
+                <input type="submit" value="Create" class=" waves-effect waves-green btn-flat green lighten-1 submit-btn" />
             </div>
         </form>
     </div>
 </div>
 
 {{if .Faculties}}
-<table class="striped z-depth-1">
+<table class="container striped z-depth-1">
     <thead>
     <tr>
+        <th></th>
         <th>id</th>
         <th>Name</th>
         <th>Designation</th>
@@ -75,6 +76,7 @@
     <tbody>
     {{range .Faculties}}
     <tr>
+        <td></td>
         <td>{{.ID}}</td>
         <td>{{.Name}}</td>
         <td><span>{{.Designation}}</span></td>
