--- a/views/students.html
+++ b/views/students.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <link type="text/css" href="/static/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="/static/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
@@ -26,9 +26,9 @@
         </div>
     </nav>
 
-    <div class="button">
+    <div class="button container">
         <!-- Modal Trigger -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+        <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-2 " href="#modal1">Add New Student</a>
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
@@ -71,16 +71,17 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" value="Submit" class=" waves-effect waves-green btn-flat"/>
+                    <input type="submit" value="Create" class=" waves-effect waves-green btn-flat green lighten-1 submit-btn" />
                 </div>
             </form>
         </div>
     </div>
 
     {{if .Students}}
-    <table class="striped z-depth-1">
+    <table class="container striped z-depth-1">
         <thead>
         <tr>
+            <th></th>
             <th>id</th>
             <th>Name</th>
             <th>USN</th>
@@ -92,6 +93,7 @@
         <tbody>
         {{range .Students}}
         <tr>
+            <td></td>
             <td>{{.ID}}</td>
             <td>{{.Name}}</td>
             <td><span>{{.Usn}}</span></td>
