--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -54,7 +54,7 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title card-action">
-                      <a href="/dashboard/committies">  Committees</a>
+                      <a href="/dashboard/committees">  Committees</a>
                     </span>
                   </div>
                 </div>
