--- a/views/committee.html
+++ b/views/committee.html
@@ -47,6 +47,22 @@
 
                     <div class="row">
                         <div class="input-field col s12">
+                            <textarea id="description" placeholder="Enter the Committee Description" name="description"
+                                      class="materialize-textarea"></textarea>
+                            <label for="description">Description</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input placeholder="Enter the Committee Created Date" id="creation_date" name="creation_date" type="date"
+                                   class="validate">
+                            <label for="creation_date">Created Date</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
                             <select multiple name="members">
                                 <option value="" disabled>Choose Faculties</option>
                                 {{range .Faculties}}
@@ -74,6 +90,7 @@
         <th></th>
         <th>id</th>
         <th>Name</th>
+        <th>Created Date</th>
         <th>Members</th>
         <th></th>
     </tr>
@@ -84,6 +101,7 @@
         <td></td>
         <td>{{.ID}}</td>
         <td>{{.Name}}</td>
+        <td>{{.Created}}</td>
         <td>
             {{if .Members}}
             <ol>
@@ -127,7 +145,9 @@
             e.preventDefault();
 
             const nameInput = committeeForm.elements.namedItem("name");
-            const membersInput = committeeForm.elements.namedItem("members")
+            const descriptionInput = committeeForm.elements.namedItem("description")
+            const creationDateInput = committeeForm.elements.namedItem("creation_date");
+            const membersInput = committeeForm.elements.namedItem("members");
             const membersInstance = M.FormSelect.getInstance(membersInput);
 
             const members = [];
@@ -137,12 +157,14 @@
                 members.push({
                     "id": parseInt(arr[0]),
                     "name": arr[1],
-                    "designation": arr[2]
+                    "designation": arr[2],
                 })
             }));
 
             const postData = {
                 "name": nameInput.value,
+                "description": descriptionInput.value,
+                'creation_date': creationDateInput.value,
                 "members": members,
             }
 
@@ -151,11 +173,12 @@
                 }
             )
 
+            console.log(postData)
 
             fetch(committeeForm.action, {
                 method: "POST",
                 body: JSON.stringify(postData),
-                headers: headers
+                headers,
             }).then(() => {
                 location.reload()
             })
