--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,81 +1,82 @@
 <html>
-    <head>
-        <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
+<head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection"/>
 
-        <!--Let browser know website is optimized for mobile-->
+    <!--Let browser know website is optimized for mobile-->
 
-        <link type="text/css" href="/static/css/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    <link type="text/css" href="/static/css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
-    <body>
+<body>
 
-        <nav class="grey darken-3">
-            <div class="container top-nav">
-                <div class="nav-wrapper">
-                    <a href="/" class="brand-logo">Committee</a>
-                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="fa fa-bars fa-2x"></i></a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
-<!--                        <li><a href="/dashbord">dashboard</a></li>-->
-                        <li><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>
-                    </ul>
+<nav class="grey darken-3">
+    <div class="container top-nav">
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo">Committee</a>
+            <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i
+                    class="fa fa-bars fa-2x"></i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <!--                        <li><a href="/dashbord">dashboard</a></li>-->
+                <!--                        <li><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>-->
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+
+    <div class="row " style="margin-top: 20vh">
+        <a href="/dashboard/faculty" class="col s12 m6 ">
+            <div class="card grey darken-3 hoverable">
+                <div class="card-content white-text">
+                      <span class="card-title card-action">
+                        <div >  Faculties</div>
+                      </span>
                 </div>
             </div>
-        </nav>
-
-          <div class="container">
-
-            <div class="row mt-6">
-                <div class="col s12 m6">
-                  <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                      <span class="card-title card-action">
-                        <a href="/dashboard/faculty">  Faculties</a>
-                      </span>
-                    </div>
-                  </div>
-                </div>
+        </a>
 
 
-              <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+        <a href="/dashboard/events" class="col s12 m6 ">
+            <div class="card grey darken-3 hoverable">
+                <div class="card-content white-text">
                     <span class="card-title card-action">
-                      <a href="/dashboard/events">  Events</a>
+                      <div>  Events</div>
                     </span>
-                  </div>
                 </div>
-              </div>
+            </div>
+        </a>
 
-              <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+        <a href="/dashboard/committees" class="col s12 m6 ">
+            <div class="card grey darken-3 hoverable">
+                <div class="card-content white-text">
                     <span class="card-title card-action">
-                      <a href="/dashboard/committees">  Committees</a>
+                      <div>  Committees</div>
                     </span>
-                  </div>
                 </div>
-              </div>
+            </div>
+        </a>
 
-              <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+        <a href="/dashboard/students" class="col s12 m6 ">
+            <div class="card grey darken-3 hoverable">
+                <div class="card-content white-text">
                     <span class="card-title card-action">
-                      <a href="/dashboard/students/"> Students</a>
+                      <div> Students</div>
                     </span>
-                  </div>
                 </div>
-              </div>
+            </div>
+        </a>
 
-              </div>
-              
-          </div>
-          
+    </div>
 
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="/static/js/materialize.min.js"></script>
-    </body>
-  </html>
+</div>
+
+
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="/static/js/materialize.min.js"></script>
+</body>
+</html>
