--- a/views/committee.html
+++ b/views/committee.html
@@ -55,7 +55,8 @@
 
                     <div class="row">
                         <div class="input-field col s12">
-                            <input placeholder="Enter the Committee Created Date" id="creation_date" name="creation_date" type="date"
+                            <input placeholder="Enter the Committee Created Date" id="creation_date"
+                                   name="creation_date" type="date"
                                    class="validate">
                             <label for="creation_date">Created Date</label>
                         </div>
@@ -101,7 +102,7 @@
         <td></td>
         <td>{{.ID}}</td>
         <td>{{.Name}}</td>
-        <td>{{.Created}}</td>
+        <td>{{.CreationDate.Format "Jan 02, 2006"}}</td>
         <td>
             {{if .Members}}
             <ol>
@@ -164,7 +165,7 @@
             const postData = {
                 "name": nameInput.value,
                 "description": descriptionInput.value,
-                'creation_date': creationDateInput.value,
+                "creation_date": new Date(Date.parse(creationDateInput.value)).toISOString(),
                 "members": members,
             }
 
