added export button view page

--- a/views/committee.html
+++ b/views/committee.html
@@ -21,7 +21,7 @@
                     class="fa fa-bars fa-2x"></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/dashboard">dashboard</a></li>
-                <li><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>
+<!--                <li><a href="/logout"><i class="fa fa-sign-out"></i>Logout</a></li>-->
             </ul>
         </div>
     </div>
@@ -29,6 +29,7 @@
 
 <div class="button container">
     <!-- Modal Trigger -->
+    <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-2 " href="/dashboard/committees/csv">Export</a>
     <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-1" href="#modal1">Add New Committee</a>
 
     <!-- Modal Structure -->
