--- a/views/events.html
+++ b/views/events.html
@@ -28,6 +28,7 @@
 
     <div class="button container">
         <!-- Modal Trigger -->
+        <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-2 " href="/dashboard/events/csv">Export</a>
         <a class="add-btn waves-effect waves-light btn modal-trigger green lighten-2 " href="#modal1">Add New Event</a>
 
         <!-- Modal Structure -->
